Clear commits